--- a/inst/css/sszTheme.css
+++ b/inst/css/sszTheme.css
@@ -40,6 +40,15 @@ h3 {
   font-weight: 750;
 }
 
+/* h4 Font */
+h4 {
+  font-family: HelveticaNeueLTW05_85Heavy;
+  color: #0F05A0;
+  font-size: 14px;
+  line-height: 23px;
+  font-weight: 750;
+}
+
 /* Paragraph Text */
 p {
   font-style: normal;
@@ -131,6 +140,10 @@ a:hover {
   h3 {
     font-size: 14px;
     line-height: 23px;
+  }
+  h4 {
+    font-size: 12px;
+    line-height: 18px;
   }
   hr {
   margin-top: 12px;
