also adjust general css

--- a/inst/css/sszThemeShiny.css
+++ b/inst/css/sszThemeShiny.css
@@ -417,7 +417,7 @@ button:active {
 
 
 /*******************************
-* Reactablee
+* Reactable
 *******************************/
 
 .rt-select {
