--- a/inst/css/sszTheme.css
+++ b/inst/css/sszTheme.css
@@ -5,11 +5,11 @@
 
 /* Ruler */
 hr {
-  height: 1px;
+  height: 0.2px;
   background-color: #DEDEDE;
   border: none;
   margin-top: 16px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 
 /* h1 */
@@ -93,7 +93,7 @@ a:hover {
 }
 
 /* Media Queries */
-@media screen and (max-width: 799px) {
+@media screen and (max-width: 768px) {
   p {
     font-size: 14px;
     line-height: 23px;
@@ -114,9 +114,13 @@ a:hover {
     font-size: 14px;
     line-height: 23px;
   }
+  h4 {
+    font-size: 12px;
+    line-height: 18px;
+  }
   hr {
-  margin-top: 12px;
-  margin-bottom: 16px;
+    margin-top: 12px;
+    margin-bottom: 16px;
   }
 }
 
@@ -146,8 +150,8 @@ a:hover {
     line-height: 18px;
   }
   hr {
-  margin-top: 12px;
-  margin-bottom: 16px;
+    margin-top: 12px;
+    margin-bottom: 16px;
   }
 }
 
@@ -157,62 +161,64 @@ a:hover {
 }
 
 /*******************************
- * Reactable
+* Reactable
 *******************************/
 
- /* Table */
+.rt-select {
+  visibility:hidden;
+}
+
+.rt-tbody {
+  font-family: HelveticaNeueLTW01_55Roman;
+}
+
+/* Table */
 .rt-table {
-   font-size: 12px;
-   color: #646464;
-   border: 0px;
- }
+  font-size: 11px;
+  color: #646464;
+  border: 0px;
+}
 
  /* Table Header */
-.rt-thead.-header {
-   color: #0F05A0;
-   font-family: HelveticaNeueLTW05_85Heavy;
- }
+.rt-thead {
+  color: #0F05A0;
+  font-family: HelveticaNeueLTW05_85Heavy;
+  position: relative;
+  min-width: 0px !important;
+  flex: 0;
+}
 
- /* Table Pagination */
+/* Table Pagination */
 .rt-pagination {
   font-size: 12px;
   color: #646464
 }
 
-.rt-page-button {
-    padding: 6px 12px;
-    background-color: transparent;
-    border: none;
-    outline-width: 0;
-    outline-style: solid;
-    cursor: pointer;
-    color: #646464;
-    border-radius: 50px;
+.rt-expander-button:hover {
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin: 0 2px;
+  padding: 0;
 }
 
-.rt-page-button:hover {
-    background-color: rgba(15, 5, 160, 0.08);
-    color: #070250;
-    transition: 0.7s;
+.rt-expander-button:active {
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline-color: transparent;
 }
 
-.rt-page-button:active {
-    background-color: #0F05A0;
-    color: white;
-    outline-color: transparent;
-    outline-style: solid;
-    transition: 0.7s;
-}
-
-.rt-page-button:disabled {
-    opacity: 0;
-    cursor: default;
+.rt-expander-button:focus {
+  background: none;
+  border: none;
+  outline-color: transparent;
 }
 
 /* Activate Background-color and pointer on hover */
 .ReactTable .rt-tr:hover .rt-td {
-    background: #F2F2F2;
-    cursor: pointer;
+  background: #F2F2F2;
+  cursor: pointer;
 }
 
 /* Delete row select */
@@ -220,6 +226,9 @@ a:hover {
   display: none;
 }
 
+.rt-th-select {
+  display: none;
+}
 
  /*******************************
  * SSZ Fonts
