--- a/inst/css/sszThemeShiny.css
+++ b/inst/css/sszThemeShiny.css
@@ -159,11 +159,6 @@ a:hover {
   }
 }
 
-/* svg (own class because inline css from path overwrites general css) */
-path {
-  stroke: #0F05A0;
-}
-
 
 /*******************************
 * Context Box
@@ -883,6 +878,7 @@ button:active {
     line-height: 22px;
     padding: 2px 6px 2px 6px;
     text-align: center;
+    stroke: #0F05A0;
 }
 
 /* Button Hover */
@@ -892,6 +888,10 @@ button:active {
     border: 1px solid #070250;
     color: white;
     transition: 0.5s;
+}
+
+.sszDownload path {
+  stroke: #0F05A0;
 }
 
 .sszDownload:hover path {
