icon color and writing color in download

--- a/inst/css/sszThemeShiny.css
+++ b/inst/css/sszThemeShiny.css
@@ -892,6 +892,7 @@ button:active {
 
 .sszDownload:focus, .sszDownload:active {
   text-decoration:none;
+  color: #0F05A0;
 }
 
 .sszDownload path {
