--- a/inst/css/sszThemeShiny.css
+++ b/inst/css/sszThemeShiny.css
@@ -355,6 +355,78 @@ a:hover {
 
 
 /*******************************
+* Slider Input
+*******************************/
+
+/* Div around Radio Buttons */
+.sliderDiv {
+  margin-top: 18px;
+}
+/* SZZ Radio Button */
+.sszSliderInput {
+  margin-top: 10px;
+}
+.irs-bar {
+  width: 100%;
+  height: 25px;
+}
+.irs--shiny .irs-bar {
+  border-top: 1px solid #0F05A0;
+  border-bottom: 1px solid #0F05A0;
+  background: #0F05A0;
+}
+.irs-bar-edge {
+  background: black;
+  border: 1px solid black;
+  height: 25px;
+  border-radius: 0px;
+  width: 20px;
+
+}
+.irs-line {
+  border: 1px solid black;
+  height: 25px;
+  border-radius: 0px;
+
+}
+.irs-grid-text {
+  font-family: HelveticaNeueLTW01_55Roman;
+/*  font-size: 14px;*/
+  color: #646464;
+  bottom: 17px;
+  z-index: 1;
+}
+/*
+.irs-grid-pol {
+  display: none;
+}
+*/
+.irs-max {
+  font-family: HelveticaNeueLTW01_55Roman;
+/*  font-size: 14px !important;*/
+  color: #646464;
+}
+.irs-min {
+  font-family: HelveticaNeueLTW01_55Roman;
+/*  font-size: 14px !important;*/
+  color: #646464;
+}
+.irs-single {
+  font-family: HelveticaNeueLTW01_55Roman;
+/*  font-size: 14px !important;*/
+}
+.irs--shiny .irs-from, .irs--shiny .irs-to, .irs--shiny .irs-single {
+  color: white;
+  background: #0F05A0;
+}
+/*.irs-slider {
+  width: 20px;
+  height: 20px;
+  top: 22px;
+}*/
+
+
+/*******************************
 * Autocomplete from daqana/dqshiny
 *******************************/
 
