--- a/inst/css/sszThemeShiny.css
+++ b/inst/css/sszThemeShiny.css
@@ -391,7 +391,7 @@ a:hover {
 }
 .irs-grid-text {
   font-family: HelveticaNeueLTW01_55Roman;
-/*  font-size: 14px;*/
+  font-size: 12px;
   color: #646464;
   bottom: 17px;
   z-index: 1;
@@ -408,12 +408,12 @@ a:hover {
 }
 .irs-min {
   font-family: HelveticaNeueLTW01_55Roman;
-/*  font-size: 14px !important;*/
+  font-size: 12px !important;
   color: #646464;
 }
 .irs-single {
   font-family: HelveticaNeueLTW01_55Roman;
-/*  font-size: 14px !important;*/
+  font-size: 12px !important;
 }
 .irs--shiny .irs-from, .irs--shiny .irs-to, .irs--shiny .irs-single {
   color: white;
