--- a/scss/parameters.scss
+++ b/scss/parameters.scss
@@ -5,3 +5,7 @@ $h3-color-grey: #4D4D4D;
 $text-color: #646464;
 $bg-color-light: #F2F2F2;
 
+// fonts
+$title-font: HelveticaNeueLTW05_85Heavy;
+$main-font: HelveticaNeueLTW01_55Roman;
+
