create separate scss files for labels, media queries, input

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,6 @@
-@import "parameters.scss";
-@import "general.scss";
+@import "parameters";
+@import "general";
+@import "media-queries";
+@import "labels";
+
+@import "input";
