--- a/scss/general.scss
+++ b/scss/general.scss
@@ -90,3 +90,15 @@ a {
     color: $dark-blue;
   }
 }
+
+/* Context Box */
+.well {
+  border-radius: 0px;
+  background-color: transparent;
+  box-shadow: none;
+  border: 0 solid $text-color;
+  position: relative;
+  z-index: 0;
+  padding: 0;
+  margin-top: 20px;
+}
