separate text input, adjustments for radio incompatible units

--- a/scss/radio.scss
+++ b/scss/radio.scss
@@ -56,8 +56,9 @@ radio {
 
     &:focus {
       border: 0.05em solid #080490;
-      outline: max(2px, 0.15em) solid transparent;
-      outline-offset: max(2px, 0.15em);
+      //outline: max(2px, 0.15em) solid transparent;
+      //outline-offset: max(2px, 0.15em);
+      //max with two different units does not work with scss, todo adjust
     }
 
     &::before {
