--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,10 @@
 @import "media-queries";
 @import "labels";
 
+// widgets in more or less alphabetical order
+@import "autocomplete";
 @import "input";
 @import "radio";
+@import "slider";
 @import "text-input";
+
