separate scss for action button

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import "labels";
 
 // widgets in more or less alphabetical order
+@import "action-button";
 @import "autocomplete";
 @import "input";
 @import "radio";
