create separate scss file for fonts

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import "parameters";
 @import "general";
 @import "media-queries";
+@import "fonts";
 @import "labels";
 
 // widgets in more or less alphabetical order
