--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 
 // widgets in more or less alphabetical order
 @import "action-button";
+@import "airdatepicker";
 @import "autocomplete";
 @import "input";
 @import "radio";
