create separate scss file for date range (still very ugly!)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import "action-button";
 @import "airdatepicker";
 @import "autocomplete";
+@import "date-range";
 @import "input";
 @import "radio";
 @import "reactable";
