add last changes from shiny css to some scss file

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "airdatepicker";
 @import "autocomplete";
 @import "date-range";
+@import "info-div";
 @import "input";
 @import "radio";
 @import "reactable";
