--- a/scss/select-input.scss
+++ b/scss/select-input.scss
@@ -62,7 +62,7 @@
     //padding: 6px 16px 6px 16px;
     transition: 0.5s;
   }
-  
+
 }
 
 .selectize-input.focus {
@@ -72,7 +72,7 @@
    outline: 0;
    border-radius: 2px;
    box-shadow: none;
-   font-family: '$main-font';
+   font-family: $main-font;
    line-height: 26px;
    font-size: 14px;
    padding: 6px 16px 6px 16px;
@@ -102,7 +102,7 @@
     outline: 0;
     border-radius: 2px;
     box-shadow: none;
-    font-family: '$main-font';
+    font-family: $main-font;
     line-height: 26px;
     font-size: 14px;
     padding: 6px 16px 6px 16px;
