--- a/scss/action-button.scss
+++ b/scss/action-button.scss
@@ -17,7 +17,7 @@
 
   &:hover {
     background-color: $dark-blue;
-    //color: white;
+    color: white;
     transition: 0.5s;
   }
 
@@ -26,7 +26,7 @@
     outline-style: solid;
     outline: transparent;
     background-color: $dark-blue;
-    //color: white;
+    color: white;
   }
 
   /* Button no Outline on Click */
