--- a/scss/ssz-download.scss
+++ b/scss/ssz-download.scss
@@ -26,7 +26,7 @@
     stroke: $zueriblau;
 
     &:hover {
-      //text-decoration:none;
+      text-decoration:none;
       background-color: $dark-blue;
       border: 1px solid $dark-blue;
       color: white;
@@ -34,7 +34,7 @@
 
       path {
         stroke: white;
-        //transition: 0.5s;
+        transition: 0.5s;
       }
   }
 
