--- a/scss/ssz-download.scss
+++ b/scss/ssz-download.scss
@@ -16,7 +16,7 @@
     text-decoration:none;
     background-color: white;
     border-radius: 3px;
-    border: 1px solid #7974C2;
+    border: 1px solid $zueriblau;
     color: $zueriblau;
     font-family: $main-font;
     font-size: 14px;
@@ -25,6 +25,10 @@
     text-align: center;
     stroke: $zueriblau;
 
+    &:focus, &:active {
+    text-decoration:none;
+    color: $zueriblau;
+  }
     &:hover {
       text-decoration:none;
       background-color: $dark-blue;
@@ -36,11 +40,7 @@
         stroke: white;
         transition: 0.5s;
       }
-  }
-
-  :focus, &:active {
-    text-decoration:none;
-  }
+    }
 
   path {
     stroke: $zueriblau;
