use scss for new styling instead of css

--- a/scss/main_shiny.scss
+++ b/scss/main_shiny.scss
@@ -8,6 +8,7 @@
 @import "info-div";
 @import "input";
 @import "radio";
+@import "radio-group";
 @import "reactable";
 @import "select-input";
 @import "slider";
