--- a/scss/general.scss
+++ b/scss/general.scss
@@ -43,9 +43,29 @@ h3 {
 h4 {
   font-family: $title-font;
   color: $zueriblau;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 23px;
   font-weight: 750;
+}
+
+/* h5 Font */
+h5 {
+  font-family: $title-font;
+  color: $zueriblau;
+  font-size: 14px;
+  line-height: 25px;
+  font-weight: 750;
+}
+
+/* h6 Font */
+h6 {
+  font-family: $title-font;
+  color: $h3-color-grey;
+  font-size: 12px;
+  line-height: 23px;
+  font-weight: 750;
+  /*margin-top: -1px;
+  margin-bottom: -0.5px;*/
 }
 
 /* Paragraph Text */
