feat: add css for bslib-cards to css for shiny

--- a/scss/main_shiny.scss
+++ b/scss/main_shiny.scss
@@ -4,6 +4,7 @@
 @import "action-button";
 @import "airdatepicker";
 @import "autocomplete";
+@import "bslib-card";
 @import "date-range";
 @import "info-div";
 @import "input";
@@ -14,4 +15,3 @@
 @import "slider";
 @import "ssz-download";
 @import "text-input";
-
