add scss, examples and documentation for tooltip and chart-button css classes

--- a/scss/main_shiny.scss
+++ b/scss/main_shiny.scss
@@ -4,6 +4,7 @@
 @import "action-button";
 @import "airdatepicker";
 @import "autocomplete";
+@import "chart-buttons";
 @import "date-range";
 @import "info-div";
 @import "input";
@@ -14,3 +15,4 @@
 @import "slider";
 @import "ssz-download";
 @import "text-input";
+@import "tooltip";
