--- a/scss/parameters.scss
+++ b/scss/parameters.scss
@@ -3,6 +3,7 @@ $zueriblau: #0F05A0;
 $dark-blue: #070250;
 $h3-color-grey: #4D4D4D;
 $text-color: #646464;
+$deep-grey: #545454;
 $bg-color-light: #F2F2F2;
 
 // fonts
